feat: adopt MB Type fonts for typography and start hashing out better typography

--- a/posts/electric-pentameter/post.mdx
+++ b/posts/electric-pentameter/post.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Do Robots Dream of Electric Pentameter?"
+title: "Do robots dream of electric pentameter?"
 
 blurb: "Generative poetry with LSTM neural networks"
 date: 2017-02-10
