feat!(viriditas): move to `sx` syntax for Box component
this makes it simpler to process styles in the component logic, and
visually clearer by colocate styles rather than mixing with other props.

--- a/packages/viriditas/theme/Typography.mdx
+++ b/packages/viriditas/theme/Typography.mdx
@@ -12,36 +12,12 @@ import { Box } from "../components/Box"
 {
 
 <div className="sb-unstyled">
-  <Box fontFamily="serif" text="7xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="6xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="5xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="4xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="3xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="2xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="lg">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="base">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="serif" text="sm">
-    Hamburgefonstiv
-  </Box>
+  <Box sx={{ font: "serif", text: "600" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "serif", text: "500" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "serif", text: "400" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "serif", text: "300" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "serif", text: "200" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "serif", text: "100" }}>Hamburgefonstiv</Box>
 </div>
 }
 
@@ -50,36 +26,12 @@ import { Box } from "../components/Box"
 {
 
 <div className="sb-unstyled">
-  <Box fontFamily="sans" text="7xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="6xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="5xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="4xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="3xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="2xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="xl">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="lg">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="base">
-    Hamburgefonstiv
-  </Box>
-  <Box fontFamily="sans" text="sm">
-    Hamburgefonstiv
-  </Box>
+  <Box sx={{ font: "sans", text: "600" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "sans", text: "500" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "sans", text: "400" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "sans", text: "300" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "sans", text: "200" }}>Hamburgefonstiv</Box>
+  <Box sx={{ font: "sans", text: "100" }}>Hamburgefonstiv</Box>
 </div>
 }
 
@@ -90,7 +42,7 @@ import { Box } from "../components/Box"
 {
 
 <div className="sb-unstyled">
-  <Box fontFamily="serif" text="base">
+  <Box sx={{ font: "serif", text: "500" }}>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -106,7 +58,7 @@ import { Box } from "../components/Box"
 {
 
 <div className="sb-unstyled">
-  <Box fontFamily="sans" text="base">
+  <Box sx={{ font: "sans", text: "500" }}>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -122,26 +74,14 @@ import { Box } from "../components/Box"
 {
 
 <div className="sb-unstyled">
-  <Box fontFamily="sans" fontWeight="thin" text="base">
-    Thin
-  </Box>
-  <Box fontFamily="sans" fontWeight="light" text="base">
-    Light
-  </Box>
-  <Box fontFamily="sans" fontWeight="normal" text="base">
-    Normal
-  </Box>
-  <Box fontFamily="sans" fontWeight="medium" text="base">
-    Medium
-  </Box>
-  <Box fontFamily="sans" fontWeight="bold" text="base">
-    Bold
-  </Box>
-  <Box fontFamily="sans" fontWeight="extraBold" text="base">
+  <Box sx={{ font: "sans", text: "500", fontWeight: "thin" }}>Thin</Box>
+  <Box sx={{ font: "sans", text: "500", fontWeight: "light" }}>Light</Box>
+  <Box sx={{ font: "sans", text: "500", fontWeight: "normal" }}>Normal</Box>
+  <Box sx={{ font: "sans", text: "500", fontWeight: "medium" }}>Medium</Box>
+  <Box sx={{ font: "sans", text: "500", fontWeight: "bold" }}>Bold</Box>
+  <Box sx={{ font: "sans", text: "500", fontWeight: "extraBold" }}>
     Extra Bold
   </Box>
-  <Box fontFamily="sans" fontWeight="black" text="base">
-    Black
-  </Box>
+  <Box sx={{ font: "sans", text: "500", fontWeight: "black" }}>Black</Box>
 </div>
 }
