chore: rename Veriditas to Basalt
as much as i liked the old name, it never did have any green in the
color theme. this new name is a better fit.

--- a/packages/basalt/theme/Typography.mdx
+++ b/packages/basalt/theme/Typography.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/blocks"
 
-import { tokens } from "@vivshaw/viriditas"
+import { tokens } from "@vivshaw/basalt"
 import { Box } from "../components/Box"
 
 <Meta title="Tokens/Typography" />
