--- a/posts/new-year-new-website/post.mdx
+++ b/posts/new-year-new-website/post.mdx
@@ -50,7 +50,7 @@ I've abandoned featuring images heavily, and moved ot a mostly-typographic desig
 
 I kept some things from the template my prior iteration was based on, like a big chunk of the color scheme. But I ripped out most of the old design, and what was left I heavily simplified.
 
-I've begun extracting the core shared styles of my app into [the bones of a design system, Viriditas](https://github.com/vivshaw/vivshaw.github.io/tree/main/packages/viriditas). There's still much to be done there, but I can now iterate on those styles in isolation when I wish to work on them, and when I'm working on the main app I don't have to worry about them. The more I move toward a [constraint-based design system](https://normalflow.pub/posts/2022-08-12-an-introduction-to-constraint-based-design-systems), the more I can free my everyday self from making tedious designs at the same time as I achieve greater visual consistency.
+I've begun extracting the core shared styles of my app into [the bones of a design system, Basalt](https://github.com/vivshaw/vivshaw.github.io/tree/main/packages/basalt). There's still much to be done there, but I can now iterate on those styles in isolation when I wish to work on them, and when I'm working on the main app I don't have to worry about them. The more I move toward a [constraint-based design system](https://normalflow.pub/posts/2022-08-12-an-introduction-to-constraint-based-design-systems), the more I can free my everyday self from making tedious designs at the same time as I achieve greater visual consistency.
 
 I designed the page to be fully keyboard-accessible, as well as responsive.
 
