chore(blog): clean up post frontmatter, more concise titles, B&W imagery

--- a/posts/data-mashups/post.mdx
+++ b/posts/data-mashups/post.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Data Mashups: Remix Your Way To Interactive Visualizations"
+title: "Data Mashups"
 
-blurb: ""
+blurb: "Remix your way to interactive visualizations"
 date: 2017-05-05
 tags:
   ["python", "javascript", "data", "geo", "visualization", "econ", "leaflet"]
