--- a/posts/haskell-snacks-yesod-morpheus-graphql/post.mdx
+++ b/posts/haskell-snacks-yesod-morpheus-graphql/post.mdx
@@ -1,9 +1,8 @@
 ---
-title: "Haskell Snacks: Integrating Yesod and Morpheus GraphQL"
+title: "Integrating Yesod and Morpheus GraphQL"
 
 blurb: "It's all about the types"
 date: 2020-12-21
-next: ["robot-brain-scala"]
 tags: ["Haskell", "Yesod", "Morpheus", "GraphQL"]
 ---
 
