--- a/posts/linux-on-windows/post.mdx
+++ b/posts/linux-on-windows/post.mdx
@@ -1,16 +1,14 @@
 ---
-title: "Linux on Windows!?"
+title: "Linux on Windows?"
 
-blurb: "Windows 10 finally finds its killer app: Linux"
+blurb: "Windows 10 finds its killer app: Linux"
 date: 2017-07-03
-next: ["robot-brain-scala"]
 tags: ["linux", "windows", "bash", "WSL", "X"]
 ---
 
 import Image from "next/image"
 
-import wslColorProbs from "./wsl-color-probs.png"
-import wslTmux from "./wsl-tmux.png"
+import wslTmux from "./wsl-tmux-bw.png"
 
 If you, like me, are one of those devs who prefer a Linux environment but are stuck on Windows because of reasons (in my case, accessibility software), if you're tired of struggling with Cygwin and MinGW, if you're put off by the hassle of running everything in VMs: do yourself a favor & try [Windows Subsystem for Linux](https://msdn.microsoft.com/en-us/commandline/wsl/about). It may sound like just another Cygwin-alike, but trust me, it is way better.
 
@@ -18,13 +16,7 @@ If you, like me, are one of those devs who prefer a Linux environment but are st
 
 WSL is a compatibility layer that implements Linux system calls on top of the Windows kernel, allowing you to run Linux binaries as though they were native. On top of this frankenkernel, you get a full Ubuntu image, giving you a good old Bash prompt, all the GNU utils you know & love, and access to build toolchains for whatever you need. apt-get usually Just Works™ too. I got a decent dev environment up with the GNU toolchain, oh-my-zsh, vim, & tmux almost immediately.
 
-There are limits, of course: there remain unimplemented system calls which will totally break some programs (for example, until recently all Haskell programs were broken due to unimplemented `timer_create`), and anything graphical is not officially supported. Using Linux cli apps in a Windows CMD or Powershell can also make things look pretty wonky. This was supposed to be [Solarized](http://ethanschoonover.com/solarized):
-
-<Image
-  alt="WSL in Powershell, showing completely incorrect colors"
-  className="Image__Small"
-  src={wslColorProbs}
-/>
+There are limits, of course: there remain unimplemented system calls which will totally break some programs (for example, until recently all Haskell programs were broken due to unimplemented `timer_create`), and anything graphical is not officially supported. Using Linux cli apps in a Windows CMD or Powershell can also make things look pretty wonky.
 
 Personally, I got fed up with Powershell after spending days trying to get my dotfiles working. But why stop at what's officially supported?
 
