--- a/posts/new-year-new-website/post.mdx
+++ b/posts/new-year-new-website/post.mdx
@@ -1,9 +1,8 @@
 ---
-title: "New Year, New Website"
+title: "New year, new website"
 
-blurb: "A rewrite always fixes everything, right?"
+blurb: "A rewrite fixes everything, right?"
 date: 2025-01-05
-next: []
 tags:
   [
     "Next.js",
