--- a/posts/robot-brain-scala/post.mdx
+++ b/posts/robot-brain-scala/post.mdx
@@ -1,9 +1,8 @@
 ---
-title: "Build a Frankenstein Robot Brain, Teach It to Read Numbers"
+title: "Build a Frankenstein robot brain"
 
-blurb: "Exploring computer vision with a from-scratch neural net in Scala"
+blurb: "Computer vision from scratch in Scala"
 date: 2017-02-04
-next: ["electric-pentameter", "build-you-a-tweetbot"]
 tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"]
 ---
 
