--- a/posts/electric-pentameter/post.mdx
+++ b/posts/electric-pentameter/post.mdx
@@ -12,7 +12,7 @@ LSTM networks are a useful technique to have under your belt, as they've been us
 
 ## Introductory matters: imports and corpus
 
-First, let's get some imports of the way:
+First, let's get some imports out of the way:
 
 ```python
 import numpy as np
