--- a/posts/haskell-snacks-yesod-morpheus-graphql/post.mdx
+++ b/posts/haskell-snacks-yesod-morpheus-graphql/post.mdx
@@ -68,4 +68,4 @@ postGraphqlR = do
   where graphqlApi = runApp app :: GQLRequest -> IO GQLResponse
 ```
 
-Things get a bit more complex once we need WebSockets support... But that's a challenge for another day!✌️
+Things get a bit more complex once we need WebSockets support... But that's a challenge for another day!
