chore(identity): add PGP key

--- a/pages/about/page.mdx
+++ b/pages/about/page.mdx
@@ -15,4 +15,4 @@ My amateur interests are many and cryptic. Ask me about [heraldry](https://zette
 
 I'm an alumna of the University of Vermont, with a B.A. in Economics and Philosophy, and of University of Colorado Boulder, with an M.Eng. When I'm not hacking on stuff, you'll generally find me reading weird fiction or philosophy, stir-frying things, or DJing techno sets. [Obfuscated code](https://github.com/vivshaw/three-wise-monkeys) is a side hobby of mine, as is [maintaining my homelab](https://github.com/vivshaw/homelab).
 
-You can reach me at [hey@vivsha.ws](mailto:hey@vivsha.ws). You can find a more complete list of my online presence in [the profile card on the main page](/).
+You can reach me at [hey@vivsha.ws](mailto:hey@vivsha.ws). For encrypted communication, here's my [PGP key](/pgp-key.asc). You can find a more complete list of my online presence in [the profile card on the main page](/).
