--- a/posts/new-year-new-website/post.mdx
+++ b/posts/new-year-new-website/post.mdx
@@ -15,21 +15,17 @@ tags:
   ]
 ---
 
-So my website had a problem. For the past... _[checks notes]_ 7 years and two iterations, it's always been partially broken. Every time I went to write a new blog post, something would get in my way. Broken image optimization, failed deployments, unreadable mobile layouts... you name it, something was broken with it. Of course I'd divert my attention to fix them, only to find 10 other things that were broken. And so on, ad nauseam, until I'd lost all motivation to write.
+So my website had a problem. For the past... 7 years and two iterations, it's always been partially broken. Every time I went to write a new blog post, something would get in my way. Broken image optimization, failed deployments, unreadable mobile layouts... you name it, something was broken with it. Of course I'd divert my attention to fix them, only to find 10 other things that were broken. And so on, ad nauseam, until I'd lost all motivation to write.
 
-Being an engineer, naturally, my first instinct is to rewrite it. Because that _always_ fixes everything, right? 😅
-
-## My evil plan to ~save the world~ fix the blog
-
-This time, I went in with a plan. My perfect 3-point platform to ~fix the world~ mildly improve my website:
+Being an engineer, naturally, my first instinct is to rewrite it. Because that _always_ fixes everything, right? This time, though, I went in with a plan. My perfect 3-point platform to ~fix the world~ mildly improve my website:
 
 1. Ruthlessly cut the site down to its most basic essence.
 2. Port what remains to a far more maintainable architecture.
 3. Make an exhaustive list of the broken things that remain, and plug away until it is usable again.
 
-## Web development is [a continuous cutting motion](https://killsixbilliondemons.com/comic/wielder-of-names-6-111/)
+## What got cut
 
-Sometimes the best thing to do with a feature is to ax it. I was surpriswed to discover just how much of my website I did not need. For example, my past iterations all had image-heavy layouts. But my content is largely text, so I shoehorned in meaningless pictures. Then I wrestled with optimization and styling and so on. Solution: remove the images and let the writing be writing. For another, I had been hosting on Vercel, but in fact I have zero need whatsoever for a backend, ISR, or any such fanciness. A static blob of files is more than enough for my needs.
+Sometimes, web development is [a continuous cutting motion](https://killsixbilliondemons.com/comic/wielder-of-names-6-111/).Sometimes the best thing to do with a feature is to ax it. I was surprised to discover just how much of my website I did not need. For example, my past iterations all had image-heavy layouts. But my content is largely text, so I shoehorned in meaningless pictures. Then I wrestled with optimization and styling and so on. Solution: remove the images and let the writing be writing. For another, I had been hosting on Vercel, but in fact I have zero need whatsoever for a backend, ISR, or any such fanciness. A static blob of files is more than enough for my needs.
 
 Other things I discovered I didn't need included runtime CSS-in-JS, a comments section, a portfolio page, and embedded social widgets. Why add complexity for features I will not use? So, all these things are now banished.
 
@@ -45,7 +41,7 @@ I'm now at a new URL, https://vivsha.ws. (I would have snagged `vivsh.aw`, but A
 
 ### Design
 
-I've abandoned featuring images heavily, and moved ot a mostly-typographic design.
+I've abandoned featuring images heavily, and moved to a mostly-typographic design.
 
 I kept some things from the template my prior iteration was based on, like a big chunk of the color scheme. But I ripped out most of the old design, and what was left I heavily simplified.
 
@@ -53,7 +49,7 @@ I've begun extracting the core shared styles of my app into [the bones of a desi
 
 I designed the page to be fully keyboard-accessible, as well as responsive.
 
-I ended up with a serif-on-serif font stack. I love a suave display serif, but I can't exactly use those for body copy. And I find large blocks of sans-serif to be visually fatiguing. So, I paired Orpheus display with a more workmanlike Georgia for body. (I even did the fancy thing where you [tune the fallback font to avoid layout shift](https://rwt.io/typography-tips/part-4-fixing-fout-font-loading-fallback-tuning)).
+I ended up with a serif-on-serif font stack. I love a suave display serif, but I can't exactly use those for body copy. And I find large blocks of sans-serif to be visually fatiguing. So, I paired Orpheus display with a more workmanlike Georgia for body. (I even did the fancy thing where you [tune the fallback font to avoid layout shift](https://www.rwt.io/typography-tips/part-4-fixing-fout-with-font-loading-and-fallback-tuning/)).
 
 ### Stack
 
@@ -85,6 +81,6 @@ Posts are now in plain Markdown by default. Previously, they were heavy on the M
 
 Posts now live in their own dedicated top-level directory. This means I don't have to go digging through folders of code to find them. I can just start writing without even thinking about my repo structure.
 
-There is now a [Hygen](https://www.hygen.io/) template to repaidly stand up new posts with correct metadata formatting. Additionally, the metadata itself has been simplified. This saves me the old headache of breaking things in confusing ways with ill-formatted metadata.
+There is now a [Hygen](https://www.hygen.io/) template to repeatedly stand up new posts with correct metadata formatting. Additionally, the metadata itself has been simplified. This saves me the old headache of breaking things in confusing ways with ill-formatted metadata.
 
 Altogether, these changes have made my corner of the internet much cozier. There's still plenty that doesn't work quite as well as I'd hope, or lacks a certain visual polish. But the things that were getting between me and writing have been bansished, along with a huge pile of unnecessary complexity. I've finally got myself a maintainable foundation that I can iterate on. Here's hoping this rewrite is the last one!
