feat(blog, MDX): simplify image loading, allow using normal Markdown syntax

--- a/posts/linux-on-windows/post.mdx
+++ b/posts/linux-on-windows/post.mdx
@@ -6,10 +6,6 @@ date: 2017-07-03
 tags: ["linux", "windows", "bash", "WSL", "X"]
 ---
 
-import Image from "next/image"
-
-import wslTmux from "./wsl-tmux-bw.png"
-
 If you, like me, are one of those devs who prefer a Linux environment but are stuck on Windows because of reasons (in my case, accessibility software), if you're tired of struggling with Cygwin and MinGW, if you're put off by the hassle of running everything in VMs: do yourself a favor & try [Windows Subsystem for Linux](https://msdn.microsoft.com/en-us/commandline/wsl/about). It may sound like just another Cygwin-alike, but trust me, it is way better.
 
 ## So What's the Dealio?
@@ -32,11 +28,7 @@ Ultimately I managed to get vim, tmux, zsh, urxvt, feh, and Powerline working th
 
 Here's my current setup:
 
-<Image
-  alt="tmux, vim, zsh, and Powerline operating inside urxvt on WSL"
-  className="Image__Small"
-  src={wslTmux}
-/>
+![tmux, vim, zsh, and Powerline operating inside urxvt on WSL](./wsl-tmux-bw.png)
 
 ## But is it useful?
 
