--- a/pages/colophon/page.mdx
+++ b/pages/colophon/page.mdx
@@ -3,10 +3,6 @@ title: "Colophon"
 description: "More about the site"
 ---
 
-import Image from "next/image"
-
-import ileum from "./Gray1045.png"
-
 ## Technical matters
 
 For technical details and the complete source code, see [GitHub](https://github.com/vivshaw/vivshaw.github.io).
@@ -19,4 +15,4 @@ I use [MB Type](https://mbtype.com/)'s [Equity](https://mbtype.com/fonts/equity/
 
 Most websites have at most a colophon, but mine also has an ileum. This makes it better than your website. Future upgrades may introduce the rest of the digestive tract.
 
-<Image alt="Ileum" className="Image__Small" src={ileum} />
+![An illustration of the ileum, from Gray's Anatomy](./Gray1045.png)
