chore(vivsha.ws): add privacy info to colophon

--- a/pages/colophon/page.mdx
+++ b/pages/colophon/page.mdx
@@ -11,6 +11,10 @@ For technical details and the complete source code, see [GitHub](https://github.
 
 I use [MB Type](https://mbtype.com/)'s [Equity](https://mbtype.com/fonts/equity/) for serif text and [Concourse](https://mbtype.com/fonts/concourse/) for sans-serif.
 
+## Privacy
+
+This website uses no cookies or tracking. Not even analytics— I'm not your mom, I don't need to know what you're up to online! The only thing stored in your browser is a preference for light or dark mode (which you are free to block or delete, as the site works fine without it).
+
 ## Ileum
 
 Most websites have at most a colophon, but mine also has an ileum. This makes it better than your website. Future upgrades may introduce the rest of the digestive tract.
